Started to add the real content

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,18 @@
+collections:
+  sectors:
+    output: true
+
+defaults:
+  - scope:
+      path: ""
+      type: "sectors"
+    values:
+      layout: "sector"
+  - scope:
+      path: ""
+    values:
+      layout: "default"
+
 exclude:
   - playbooks
   - vendor
